--- a/periscope-web/src/main/webapp/pages/project/report/allReports/mainInventor.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/mainInventor.xhtml
@@ -14,7 +14,7 @@
 
         <ui:define name="content">
 
-            <h1>Principais Inventores</h1>
+            <h1>#{msgs['main.inventor']}</h1>
 
             <h:form styleClass="container">
 
