--- a/periscope-web/src/main/webapp/pages/project/report/allReports/priorityCountry.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/priorityCountry.xhtml
@@ -33,7 +33,7 @@
                              emptyMessage="Nenhum inventor cadastrado." var="pair"
                              value="#{priorityCountryController.pairs}" >
 
-                    <p:column headerText="Nome">
+                    <p:column headerText="#{msgs['name']}">
                         <h:outputText value="#{pair.key}" />
                     </p:column>
 
