--- a/periscope-web/src/main/webapp/pages/project/patent/patentList.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/patent/patentList.xhtml
@@ -26,10 +26,11 @@
 			</h:form>			
 			<br/>						
 			<p:dataTable id="patents" var="patent" style="font-size:12px"
-				emptyMessage="Não existem patentes carregadas"
+				emptyMessage="#{msgs['registered.patent']}"
 				value="#{patentController.patents}" paginator="true"
 				paginatorAlwaysVisible="false" paginatorPosition="bottom" rows="10"
-				rowKey="#{patent.id}">
+				rowKey="#{patent.id}"
+                                >
 
 				<p:columnGroup type="header">
 					<p:row>						
