--- a/periscope-web/src/main/webapp/pages/project/projectList.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/projectList.xhtml
@@ -12,39 +12,40 @@
 		<ui:include src="/template/flashmessages.xhtml" />
 		<center>
 			<p:dataTable id="projects" var="project"
-				emptyMessage="Não Existem Projetos Cadastrados"
+				emptyMessage="#{msgs['registered.project']}"
 				value="#{projectController.projects}" paginator="true"
 				paginatorAlwaysVisible="false" paginatorPosition="bottom" rows="10"
-				rowKey="#{project.title}">
+				rowKey="#{project.title}"
+                                >
 
 				<p:columnGroup type="header">
 					<p:row>
-						<p:column rowspan="2" headerText="Título" />
-						<p:column rowspan="2" headerText="Descrição" />
-						<p:column rowspan="2" headerText="Dono" />
-						<p:column rowspan="2" headerText="Visibilidade" />
-						<p:column rowspan="2" headerText="Ações" />
+						<p:column rowspan="2" headerText="#{msgs['title']}" />
+						<p:column rowspan="2" headerText="#{msgs['description']}" />
+						<p:column rowspan="2" headerText="#{msgs['owner']}" />
+						<p:column rowspan="2" headerText="#{msgs['visibility']}" />
+						<p:column rowspan="2" headerText="#{msgs['actions']}" />
 					</p:row>
 				</p:columnGroup>
-				<p:column>
-					<center>#{project.title}</center>
+                            <p:column rendered="#{project.isPublic or project.owner.id eq currentUser.id or currentUser.userLevel.accessLevel == 10 or project.observers.contains(currentUser)}">
+					<center >#{project.title}</center>
 				</p:column>
-				<p:column width="300">														
+                            <p:column width="300" rendered="#{project.isPublic or project.owner.id eq currentUser.id or currentUser.userLevel.accessLevel == 10 or project.observers.contains(currentUser)}">														
 						#{project.description}						
 				</p:column>
-				<p:column>														
+                            <p:column rendered="#{project.isPublic or project.owner.id eq currentUser.id or currentUser.userLevel.accessLevel == 10 or project.observers.contains(currentUser)}">														
 						#{project.owner}						
 				</p:column>
-				<p:column>
+                            <p:column rendered="#{project.isPublic or project.owner.id eq currentUser.id or currentUser.userLevel.accessLevel == 10 or project.observers.contains(currentUser)}">
 					<center>
 						<h:panelGroup rendered="#{empty project.observers}">
 							<span class="label label-#{project.isPublic ? 'success' : 'important'}">
-								#{project.isPublic ? 'Público' : 'Privado'} 
+								#{project.isPublic ? msgs['public'] : msgs['private']} 
 							</span>	
 						</h:panelGroup>
 						<h:panelGroup rendered="#{not empty project.observers}">
 							<span class="label label-#{project.isPublic ? 'success' : 'info'}">
-								#{project.isPublic ? 'Público' : 'Compartilhado'} 
+								#{project.isPublic ? msgs['public'] : msgs['shared']} 
 							</span>	
 						</h:panelGroup>
 						
@@ -53,22 +54,26 @@
 				<p:column>
 					<center>
 						<h:form style="margin-bottom:0px">
-							<h:commandLink value="Abrir" style="color:white;margin-right: 10px"
+							<h:commandLink value="#{msgs['open']}" style="color:white;margin-right: 10px"
 								class="btn btn-inverse" action="#{projectSession.openProject(project.id.toString())}"/>
-							<h:commandLink value="Editar" action="editProject" rendered="#{project.owner.id eq currentUser.id or currentUser.userLevel.accessLevel == 10}"
+                                                        <h:commandLink id="editProject" value="#{msgs['edit']}" action="editProject" disabled="#{!(project.owner.id eq currentUser.id or currentUser.userLevel.accessLevel == 10 or project.observers.contains(currentUser))}"
 								style="color:white;margin-right: 10px" class="btn btn-inverse">
 								<f:param name="projectId" value="#{project.id.toString()}"/>	
 							</h:commandLink>
-							<h:commandLink value="Deletar" style="color:white" rendered="#{project.owner.id eq currentUser.id or currentUser.userLevel.accessLevel == 10}"
-								onclick="if(!confirm('Deseja excluir este projeto e os dados relacionados ?')) { return false; }"
+                                                        <p:tooltip for="editProject" value="Sem Permissão!" rendered="#{!(project.owner.id eq currentUser.id or currentUser.userLevel.accessLevel == 10 or project.observers.contains(currentUser))}"
+                                                                   style="color: red"/>
+                                                        <h:commandLink id="deleteProject" value="#{msgs['delete']}" style="color:white" disabled="#{!(project.owner.id eq currentUser.id or currentUser.userLevel.accessLevel == 10 or project.observers.contains(currentUser))}"
+								onclick="if(!confirm('#{msgs['delete.project']}')) { return false; }"
 								class="btn btn-inverse" action="#{projectController.delete(project.id.toString())}"/>
+                                                        <p:tooltip for="deleteProject" value="Sem Permissão!" rendered="#{!(project.owner.id eq currentUser.id or currentUser.userLevel.accessLevel == 10 or project.observers.contains(currentUser))}"
+                                                                   style="color: red"/>
 						</h:form>
 					</center>
 				</p:column>
 			</p:dataTable>
 			<br />
 			<h:form>
-				<h:commandLink value="Novo projeto" style="color:white"
+				<h:commandLink value="#{msgs['new.project']}" style="color:white"
 					class="btn btn-large btn-info" action="newProject"/>
 			</h:form>			
 
