--- a/periscope-web/src/main/webapp/pages/user/userList.xhtml
+++ b/periscope-web/src/main/webapp/pages/user/userList.xhtml
@@ -12,17 +12,17 @@
 		<ui:include src="/template/flashmessages.xhtml" />		
 		<center>
 			<p:dataTable id="users" var="user"
-				emptyMessage="Não Existem usuário cadastrados"
+				emptyMessage="#{msgs['registered.user']}"
 				value="#{userController.users}" paginator="true"
 				paginatorAlwaysVisible="false" paginatorPosition="bottom" rows="10"
 				rowKey="#{user.title}">
 
 				<p:columnGroup type="header">
 					<p:row>
-						<p:column rowspan="2" headerText="Nome" />
+						<p:column rowspan="2" headerText="#{msgs['name']}" />
 						<p:column rowspan="2" headerText="Email" />
-						<p:column rowspan="2" headerText="Nível de Acesso" />
-						<p:column rowspan="2" headerText="Ações" />
+						<p:column rowspan="2" headerText="#{msgs['access.level']}" />
+						<p:column rowspan="2" headerText="#{msgs['actions']}" />
 					</p:row>
 				</p:columnGroup>
 				<p:column>
@@ -41,20 +41,25 @@
 				<p:column>
 					<center>
 						<h:form style="margin-bottom:0px">
-							<h:commandLink value="Editar" action="editUser" rendered="#{currentUser.userLevel.accessLevel == 10 or currentUser.id.toString() == user.id.toString()}"
-								style="color:white;margin-right: 10px" class="btn btn-inverse">
-								<f:param name="userId" value="#{user.id.toString()}"/>	
-							</h:commandLink>
-							<h:commandLink value="Deletar" style="color:white" rendered="#{currentUser.userLevel.accessLevel == 10 and currentUser.id.toString() != user.id.toString()}"
-								onclick="if(!confirm('Deseja excluir este usuario ?')) { return false; }"
-								class="btn btn-inverse" action="#{userController.delete(user.id.toString())}"/>
-						</h:form>
+                                                    <h:commandLink id="editUser" value="#{msgs['edit']}" action="editUser" disabled="#{!(currentUser.userLevel.accessLevel == 10) and !(currentUser.id.toString() == user.id.toString())}" 
+                                                                   style="color:white;margin-right: 10px" class="btn btn-inverse">
+                                                        <p:tooltip for="editUser" value="Sem Permissão!" style="color: red" rendered="#{!(currentUser.userLevel.accessLevel == 10) and !(currentUser.id.toString() == user.id.toString())}"></p:tooltip>
+                                                        
+                                                        <f:param name="userId" value="#{user.id.toString()}"/>	
+                                                    </h:commandLink>
+                                                    <h:commandLink id="deleteUser" value="#{msgs['delete']}" style="color:white" disabled="#{!(currentUser.userLevel.accessLevel == 10 and currentUser.id.toString() != user.id.toString())}"
+                                                                   onclick="if(!confirm('#{msgs['delete.user']}')) { return false; }"
+                                                                   class="btn btn-inverse" action="#{userController.delete(user.id.toString())}"/>
+                                                    <p:tooltip for="deleteUser" value="Sem Permissão" rendered="#{!(currentUser.userLevel.accessLevel == 10 and currentUser.id.toString() != user.id.toString())}"
+                                                               style="color: red"/>
+                                                </h:form>
 					</center>
 				</p:column>
 			</p:dataTable>
 			<br />
+                        
 			<h:form>
-				<h:commandLink value="Novo Usuário" style="color:white"
+				<h:commandLink value="#{msgs['new.user']}" style="color:white"
 					class="btn btn-large btn-info" action="newUser"/>
 			</h:form>			
 
