--- a/periscope-web/src/main/webapp/login.xhtml
+++ b/periscope-web/src/main/webapp/login.xhtml
@@ -45,7 +45,7 @@
 			</div>			
 		</h:form>
 		<br/>
-		<center>			
+<!--		<center>			
 			<p:panelGrid columns="1" style="padding:0px;margin:0px;font-size:70%">															
 					
 				<h3>Usuário de teste para o sistema</h3>
@@ -53,7 +53,7 @@
 				<p>Senha : <b>123456</b></p>				
 								
 			</p:panelGrid>
-		</center>
+		</center>-->
 	</h:body>
 </f:view>
 </html>
