--- a/periscope-web/src/main/webapp/pages/project/editProject.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/editProject.xhtml
@@ -18,7 +18,7 @@
                 </h:panelGroup>
                 <br/>
                 <h:form>
-                    <h:panelGrid columns="2">
+                    <h:panelGrid columns="3">
                         <h:panelGrid columns="3" cellpadding="10">
                             <h:outputLabel id="lblTitle" for="txtTitle" value="Título *" style="font-weight:bold"/>				
                             <p:inputText id="txtTitle" value="#{projectController.project.title}"
@@ -74,50 +74,20 @@
 
                             </h:panelGrid>					
                         </h:panelGroup>
-                    </h:panelGrid>	
-                    <h:panelGroup id="panelHelp">
+                        <h:panelGroup id="panelHelp">
                         <p:panel toggleOrientation="vertical" style="background-color: #f5f5f5">
                             <h4>Ajuda</h4>
-                            <p:outputLabel id="projectsHelp" value="Projeto"/>
+                            <p:outputLabel id="projectsHelp"><a href="#">Projetos</a></p:outputLabel>
                             <p:tooltip for="projectsHelp">
-                                <h:outputText escape="false">
-                                    Privados <br/>
-                                    Projetos privados são aqueles em que somente seu criador tem acesso e poder de exclusão/edição.<br/>
-                                    Usuários
-
-                                </h:outputText>
+                                <h:outputText escape="false" value="#{msgs['project.help']}"/>
                             </p:tooltip>
-                            <p:outputLabel>Usuário</p:outputLabel>
-
-
-
-
-                            <p:accordionPanel activeIndex="">
-                                <p:tab title="Projetos">
-                                    <p:accordionPanel activeIndex="" id="painelajuda" >
-                                        <p:tab title="Privados">
-                                            <p:outputLabel>Projetos privados são aqueles em que somente seu criador tem acesso e poder de exclusão/edição.</p:outputLabel>
-                                        </p:tab>
-                                        <p:tab title="Públicos">
-                                            <p:outputLabel>Projetos públicos são aqueles em que todo usuário cadastrado no sistema tem acesso, mas, apenas o criador do projeto tem poder de exclusão/edição</p:outputLabel>
-                                        </p:tab>
-                                        <p:tab title="Compartilhados">
-                                            <p:outputLabel>Projetos compartilhados são aqueles em que os usuários selecionados e adicionados tem acesso e poder de exclusão/edição</p:outputLabel>
-                                        </p:tab>
-                                        <p:tab title="Público e Compartilhado">
-                                            <p:outputLabel>O projeto pode ser público e compartilhado, ou seja, todos os usuários cadastrados no sistema tem acesso ao projeto, mas, apenas os usuários selecionados e adicionados na criação ou na edição do projeto podem editar/ecluir o projeto</p:outputLabel>
-                                        </p:tab>    
-                                        <p:tab title="Privado e Compartilhado">
-                                            <p:outputLabel>O projeto pode também ser privado e compartilhado, ou seja, o projeto estará visivel apenas para os usuários selecionados e adicionados na criação ou na edição do projeto e esses tem acesso e poder de exclusão/edição</p:outputLabel>
-                                        </p:tab>    
-                                    </p:accordionPanel>
-                                </p:tab>
-                                <p:tab title="Usuários">
-                                    <p:outputLabel>É possível adicionar usuários ao projeto, assim, o projeto se torna compartilhado. A lista de seleção contém todos os usuários cadastrados, exceto o usuário que logou no sistema, uma vez que esse é o dono do projeto e portanto já está incluso.</p:outputLabel>
-                                </p:tab>
-                            </p:accordionPanel>
+                             <p:outputLabel id="usersHelp"><a href="#">Usuários</a></p:outputLabel>
+                            <p:tooltip for="usersHelp">
+                                <h:outputText escape="false" value="#{msgs['user.help']}"/>
+                            </p:tooltip>
                         </p:panel>
                     </h:panelGroup>
+                    </h:panelGrid>	
                     <h:panelGrid columns="2" cellpadding="10">							
 
                         <h:commandLink value="Salvar" action="#{projectController.create()}"
