--- a/periscope-web/src/main/webapp/pages/project/harmonization/dialogInventorRule.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/dialogInventorRule.xhtml
@@ -18,10 +18,12 @@
 				<f:selectItems value="#{inventorHarmonizationController.countries}" var="c" itemValue="#{c.acronym}" itemLabel="#{c.name}"/>					
 			</p:selectOneMenu>
 			
-			<h:outputLabel value="Natureza " style="font-weight:bold"/>
+<!--			<h:outputLabel value="Natureza " style="font-weight:bold"/>
 			<p:selectOneMenu id="cmbNature" value="#{inventorHarmonizationController.rule.nature.name}">
 				<f:selectItem itemLabel="Nenhuma" itemValue=""/>
-			</p:selectOneMenu>						
+			</p:selectOneMenu>						-->
+                        <br/>
+                        <br/>
 		</h:panelGrid>		
 										
 		<h:panelGrid id="panelSugestions" columns="3">
