--- a/periscope-web/src/main/webapp/pages/project/patent/patentImport.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/patent/patentImport.xhtml
@@ -36,7 +36,7 @@
                                     <p:graphicImage value="/imgs/espacenetHelp.png"/>
 
                                 </p:tooltip>
-                                <p:outputLabel id="dpmaHelp"><h4><a href="https://register.dpma.de/DPMAregister/pat/einsteiger" target="_blank "> DPMA</a></h4> .csv</p:outputLabel>
+                                <p:outputLabel id="dpmaHelp"><h4><a href="https://depatisnet.dpma.de/DepatisNet/depatisnet?action=einsteiger&amp;switchToLang=en" target="_blank "> DPMA</a></h4> .csv</p:outputLabel>
                                 <p:tooltip for="dpmaHelp">
                                     <p:outputLabel value="#{msgs['dpma.help']}" escape="false"/>
                                     <p:graphicImage value="/imgs/dpmaHelp.png"/>
