Volta a posibilidade de Deploy.

--- a/periscope-web/src/main/webapp/pages/project/patent/patentList.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/patent/patentList.xhtml
@@ -29,7 +29,7 @@
 				emptyMessage="#{msgs['registered.patent']}"
 				value="#{patentController.patents}" paginator="true"
 				paginatorAlwaysVisible="false" paginatorPosition="bottom" rows="10"
-				rowKey="#{patent.id}"
+                                rowKey="#{patent.id}" lazy="true"
                                 >
 
 				<p:columnGroup type="header">
