--- a/periscope-web/src/main/webapp/pages/project/patent/patentList.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/patent/patentList.xhtml
@@ -1,103 +1,106 @@
 <?xml version='1.0' encoding='utf-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-<ui:composition template="/template/template.xhtml">	
-	<ui:define name="content">
-		<ui:include src="/template/flashmessages.xhtml" />
-		<center>
-			<h:form id="formType">			
-				<ul class="nav nav-pills pull-left">
-					<ui:repeat var="type" value="#{patentController.filters}">
-						<li class="#{(param['listType'] == type or patentController.type == type) ? 'active' : ''}">
-						    <p:commandLink value="#{msgs[type]}" update=":formType :patents" 
-						    	action="#{patentController.updateList}">			    
-						    	<f:param name="listType" value="#{type}"/>
-						    </p:commandLink>
-				  		</li>
-					</ui:repeat>				  
-				</ul>
-				<h:outputText styleClass="pull-right" style="font-size:16px"
-				value="Listando #{patentController.partialCount} de #{patentController.totalCount} patentes cadastradas."/>
-			</h:form>			
-			<br/>						
-			<p:dataTable id="patents" var="patent" style="font-size:12px"
-				emptyMessage="#{msgs['registered.patent']}"
-				value="#{patentController.patents}" paginator="true"
-				paginatorAlwaysVisible="false" paginatorPosition="bottom" rows="10"
-                                rowKey="#{patent.id}" lazy="true"
-                                >
+    <ui:composition template="/template/template.xhtml">	
+        <ui:define name="content">
+            <ui:include src="/template/flashmessages.xhtml" />
+            <center>
+                <h:form id="formType">			
+                    <ul class="nav nav-pills pull-left">
+                        <ui:repeat var="type" value="#{patentController.filters}">
+                            <li class="#{(param['listType'] == type or patentController.type == type) ? 'active' : ''}">
+                                <p:commandLink value="#{msgs[type]}" update=":formType :patents" 
+                                               action="#{patentController.updateList}">			    
+                                    <f:param name="listType" value="#{type}"/>
+                                </p:commandLink>
+                            </li>
+                        </ui:repeat>				  
+                    </ul>
+                    <h:outputText styleClass="pull-right" style="font-size:16px"
+                                  value="Listando #{patentController.partialCount} de #{patentController.totalCount} patentes cadastradas."/>
+                </h:form>			
+                <br/>						
+                <p:dataTable id="patents" var="patent" style="font-size:10px"
+                             emptyMessage="#{msgs['registered.patent']}"
+                             value="#{patentController.patents}" paginator="true"
+                             paginatorAlwaysVisible="false" paginatorPosition="bottom" rows="10"
+                             rowKey="#{patent.id}" lazy="true"
+                             >
 
-				<p:columnGroup type="header">
-					<p:row>						
-						<p:column rowspan="2" headerText="Número de Depósito" />
-						<p:column rowspan="2" headerText="Número de Publicação" />
-						<p:column rowspan="2" headerText="Prioridade" />
-						<p:column rowspan="2" headerText="Depositantes" />
-						<p:column rowspan="2" headerText="Inventores" />
-						<p:column rowspan="2" headerText="Título" />
-						<p:column rowspan="2" headerText="Classificação Principal" />
-						<!--  <p:column rowspan="2" headerText="Lista Negra" /> -->
-						<p:column rowspan="2" headerText="Ações" />
-					</p:row>
-				</p:columnGroup>			
-				<p:column>														
-						#{patent.applicationNumber}					
-				</p:column>
-				<p:column>														
-						#{patent.publicationNumber}					
-				</p:column>
-				<p:column>														
-						#{patent.prioritiesToString}					
-				</p:column>
-				<p:column>														
-						#{patent.applicantsToString}					
-				</p:column>
-				<p:column>														
-						#{patent.inventorsToString}					
-				</p:column>
-				<p:column width="150">
-					<center>#{patent.titleSelect}</center>
-				</p:column>	
-				<p:column>														
-						#{patent.mainClassification.value}						
-				</p:column>
-				<!-- 
-				<p:column>
-					<center>
-						<span class="label label-#{patent.blacklisted ? 'inverse' : 'success'}">
-							#{patent.blacklisted ? 'Sim' : 'Não'}
-						</span>
-					</center>
-				</p:column>
-				 -->
-				<p:column>
-					<center>
-						<h:form style="margin-bottom:0px">
-							<h:commandLink value="Editar"
-								style="color:white;margin-right: 10px" class="btn btn-inverse">	
-							</h:commandLink>							
-							<h:commandLink value="Lista Negra" action="#{patentController.updateBlackListPatent()}" 
-								style="color:white" class="btn btn-inverse" rendered="#{not patent.blacklisted}"/>
-							<h:commandLink value="Retirar da Lista Negra" action="#{patentController.updateBlackListPatent()}" 
-								style="color:white" class="btn btn-inverse" rendered="#{patent.blacklisted}"/>	
-							
-						</h:form>
-					</center>
-				</p:column>
-			</p:dataTable>
-			<br />
-			<h:form>
-				<h:commandLink value="Importar patentes" style="color:white"
-					class="btn btn-large btn-info" action="importPatent"/>
-			</h:form>			
+                    <p:columnGroup type="header">
+                        <p:row>						
+                            <p:column rowspan="2" headerText="Número de Depósito" />
+                            <p:column rowspan="2" headerText="Número de Publicação" />
+                            <p:column rowspan="2" headerText="Prioridade" />
+                            <p:column rowspan="2" headerText="Depositantes" />
+                            <p:column rowspan="2" headerText="Inventores" />
+                            <p:column rowspan="2" headerText="Título" />
+                            <p:column rowspan="2" headerText="Classificação Principal" />
+                            <!--  <p:column rowspan="2" headerText="Lista Negra" /> -->
+                            <p:column rowspan="2" headerText="Ações" />
+                        </p:row>
+                    </p:columnGroup>			
+                    <p:column>														
+                        #{patent.applicationNumber}					
+                    </p:column>
+                    <p:column>														
+                        #{patent.publicationNumber}					
+                    </p:column>
+                    <p:column>														
+                        #{patent.prioritiesToString}					
+                    </p:column>
+                    <p:column>														
+                        #{patent.applicantsToString}					
+                    </p:column>
+                    <p:column>														
+                        #{patent.inventorsToString}					
+                    </p:column>
+                    <p:column width="150">
+                        <center>#{patent.titleSelect}</center>
+                    </p:column>	
+                    <p:column>														
+                        #{patent.mainClassification.value}						
+                    </p:column>
+                    <!-- 
+                    <p:column>
+                            <center>
+                                    <span class="label label-#{patent.blacklisted ? 'inverse' : 'success'}">
+                    #{patent.blacklisted ? 'Sim' : 'Não'}
+            </span>
+    </center>
+</p:column>
+                    -->
+                    <p:column>
+                        <center>
+                            <h:form style="margin-bottom:0px">
+                                <h:commandLink value="Editar" action="editPatent" 
+                                               style="color:white;margin-right: 10px" class="btn btn-inverse" >
+                                    <f:param name="patentId" value="#{patent.id}" />
+                                </h:commandLink>	
+                                <p:commandButton value="Teste" action="#{patentController.teste()}"
+                                                 ajax="false" />
+                                <h:commandLink value="Lista Negra" action="#{patentController.updateBlackListPatent()}" 
+                                               style="color:white" class="btn btn-inverse" rendered="#{not patent.blacklisted}"/>
+                                <h:commandLink value="Retirar da Lista Negra" action="#{patentController.updateBlackListPatent()}" 
+                                               style="color:white" class="btn btn-inverse" rendered="#{patent.blacklisted}"/>	
 
-		</center>
-	</ui:define>
+                            </h:form>
+                        </center>
+                    </p:column>
+                </p:dataTable>
+                <br />
+                <h:form>
+                    <h:commandLink value="Importar patentes" style="color:white"
+                                   class="btn btn-large btn-info" action="importPatent"/>
+                </h:form>			
 
-</ui:composition>
+            </center>
+        </ui:define>
+
+    </ui:composition>
 </html>
